# openenv-data-wrangler

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
.github/workflows/: ci.yml
server/: __init__.py  app.py  data_wrangler_environment.py  requirements.txt
tests/: test_env.py  test_level4.py
